--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -17,13 +17,18 @@
 }
 
 body {
-  color: rgb(var(--foreground-rgb));
-  background: linear-gradient(
+  /* color: rgb(var(--foreground-rgb)); */
+  /* background: linear-gradient(
       to bottom,
       transparent,
       rgb(var(--background-end-rgb))
     )
-    rgb(var(--background-start-rgb));
+    rgb(var(--background-start-rgb)); */
+    font-family: 'Roboto';
+    font-weight: 300;
+
+    background-color: #EEEEEE;
+    /* background-color: white; */
 }
 
 @layer utilities {
